modifs dans clean et makedoc